test/positive/feature_finalclasses.java

  public final class feature_finalclasses {
    public feature_finalclasses() {}
  }

