test/negative/PackagePrivateClass2.java
final class PackagePrivateClass2 {
    public PackagePrivateClass2() {}
}
